24 September 2009: Wouter
	- so-rcvbuf: 4m option added.  Set this on large busy servers to not
	  drop the occasional packet in spikes due to full socket buffers.
	  netstat -su keeps a counter of UDP dropped due to full buffers.

23 September 2009: Wouter
	- 5011 query failed counts verification failures, not lookup failures.
	- 5011 probe failure handling fixup.
	- test unbound reading of original autotrust data.
	  The metadata per-key, such as key state (PENDING, MISSING, VALID) is
	  picked up, otherwise performs initial probe like usual.

22 September 2009: Wouter
	- autotrust test with algorithm rollover, new ordering of checks
	  assists in orderly rollover.
	- autotrust test with algorithm rollover to unknown algorithm.
	  checks if new keys are supported before adding them.
	- autotrust test with trust point revocation, becomes unsigned.
	- fix DNSSEC-missing-signature detection for minimal responses
	  for qtype DNSKEY (assumes DNSKEY occurs at zone apex).

18 September 2009: Wouter
	- autotrust tests, fix trustpoint timer deletion code.
	  fix count of valid anchors during missing remove.
	- autotrust: pick up REVOKE even if not signed with known other keys.

17 September 2009: Wouter
	- fix compile of unbound-host when --enable-alloc-checks.
	- Fix lookup problem reported by Koh-ichi Ito and Jaap Akkerhuis.
	- Manual page fixes reported by Tony Finch.

16 September 2009: Wouter
	- Fix memory leak reported by Tao Ma.
	- Fix memstats test tool for log-time-ascii log format.

15 September 2009: Wouter
	- iana portlist updated.

10 September 2009: Wouter
	- increased MAXSYSLOGLEN so .bg key can be printed in debug output.
	- use linebuffering for log-file: output, this can be significantly
	  faster than the previous fflush method and enable some class of
	  resolvers to use high verbosity (for short periods).
	  Not on windows, because line buffering does not work there.

9 September 2009: Wouter